# raytracing-in-one-week

./: .gitignore  CMakeLists.txt  README.md
include/: CMakeLists.txt  camera.h  color.h  hittable.h  hittable_list.h  material.h  ppm.h  ray.h  rtweekend.h  sphere.h  test_vec.cpp  vec.h
preperation/ppm-example/: CMakeLists.txt  main.cpp
src/: main.cpp
